<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Daily</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- View label -->
    <string name="click_to_add">Click to Add</string>
    <string name="task_check_btn_text">I just did this</string>
    <string name="task_create_title_hint">Task Title</string>
    <string name="task_create_days_label">Days</string>
    <string name="task_create_start_label">Start</string>
    <string name="task_default_alarm_time">21:00</string>
    <string name="task_create_confirm">Confirm</string>
    <string name="task_create_cancel">Cancel</string>
    
    <!-- Toast message -->
    <string name="msg_no_title">No Title</string>
    <string name="msg"></string>
    

</resources>
